gobmkida/g1/gtp_known_command
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/gtp_known_command/src/interface/play_gtp.c:3827:8: error: use of undeclared identifier 'commands_0'; did you mean 'commands'?
name = commands_0[0].name; 
       ^~~~~~~~~~
       commands
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/gtp_known_command/src/interface/play_gtp.c:164:27: note: 'commands' declared here
static struct gtp_command commands[] = {
                          ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/gtp_known_command/src/interface/play_gtp.c:3828:7: error: use of undeclared identifier 'commands_0'; did you mean 'commands'?
if ( !commands_0[0].name ) 
      ^~~~~~~~~~
      commands
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/gtp_known_command/src/interface/play_gtp.c:164:27: note: 'commands' declared here
static struct gtp_command commands[] = {
                          ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/gtp_known_command/src/obj/2/play_gtp.o] Error 1
